RESOLVED FIXED47489
WebProcess ASSERTs with a null application cache dir creation parameter
https://bugs.webkit.org/show_bug.cgi?id=47489
Summary WebProcess ASSERTs with a null application cache dir creation parameter
Balazs Kelemen
Reported 2010-10-11 07:34:06 PDT
The app cache dir path we get from the UI side should be chekced and ignored if it is a null or empty string.
Attachments
Patch (1.33 KB, patch)
2010-10-11 07:36 PDT, Balazs Kelemen
no flags
Patch (1.33 KB, patch)
2010-10-11 09:52 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2010-10-11 07:36:40 PDT
Csaba Osztrogonác
Comment 2 2010-10-11 07:38:29 PDT
Comment on attachment 70434 [details] Patch LGTM, r=me
Balazs Kelemen
Comment 3 2010-10-11 07:40:55 PDT
Comment on attachment 70434 [details] Patch wrong, does not tests the value just the pointer
Balazs Kelemen
Comment 4 2010-10-11 07:42:27 PDT
Comment on attachment 70434 [details] Patch :)
Balazs Kelemen
Comment 5 2010-10-11 09:52:22 PDT
Balazs Kelemen
Comment 6 2010-10-11 10:08:03 PDT
Comment on attachment 70440 [details] Patch Clearing flags on attachment: 70440 Committed r69503: <http://trac.webkit.org/changeset/69503>
Balazs Kelemen
Comment 7 2010-10-11 10:08:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.