2010-10-11  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        WebProcess ASSERTs with a null application cache dir creation parameter
        https://bugs.webkit.org/show_bug.cgi?id=47489

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/60099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69503 268f45cc-cd09-0410-ab3c-d52691b4dbfc